# herd-api

./: .env  Cargo.toml  Dockerfile  task-definition.json
.github/workflows/: aws.yml
migrations/2020-03-29-183532_timestamp_trigger/: up.sql
migrations/2020-03-31-014424_create_devices_and_events/: down.sql  up.sql
migrations/2020-04-10-025610_module_hierarchy/: down.sql  up.sql
migrations/2020-04-13-045707_add_description_columns/: down.sql  up.sql
migrations/2020-05-01-031825_add_event_created_at/: down.sql  up.sql
migrations/2020-05-06-010458_delete_components_modules_events/: up.sql
migrations/2020-05-06-012010_create_topics/: up.sql
migrations/2020-05-10-233756_create_webhooks_table/: down.sql  up.sql
migrations/2020-05-11-162731_webhook_topics_uniqueness/: down.sql  up.sql
migrations/2020-05-15-034035_create_logs/: up.sql
migrations/2020-05-31-041910_create_accounts/: up.sql
migrations/2020-06-03-030137_AddAccountAttributes/: down.sql  up.sql
src/: account.rs  auth.rs  db.rs  logging.rs  main.rs  models.rs  publisher.rs  rate_limiter.rs  schema.rs  utils.rs  webhook_publisher.rs  websocket.rs
